--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "Collection", cocktails_path, class: "nav-link" %>
+        <%= link_to "Collection", root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "New cocktail", new_cocktail_path, class: "nav-link" %>
