--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -9,8 +9,8 @@
   <div class="row list-group">
     <%= simple_form_for [ @cocktail ] do |f| %>
       <%= f.input :name %>
-      <%= f.submit "Add ingredients", class: "btn btn-secondary" %>
-      <%= f.submit "Submit without ingredients", class: "btn btn-secondary" %>
+      <%= f.submit "Add details", class: "btn btn-secondary" %>
+      <%= f.submit "Submit without details", class: "btn btn-secondary" %>
     <% end %>
   </div>
 </div>
