--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,14 +1,34 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= @url_cocktail.sample %>');">
-  <div class="container text-center">
-    <h1><%= @cocktail.name %></h1>
-    <p>Here are your mixing secrets for this drink</p>
-  </div>
+<div style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));">
+  <%= render 'shared/carousel' %>
 </div>
 
+
 <div class="container my-4">
+  <div class="row mb-5">
+    <div class="col-6">
+      <h3>Add an ingredient</h3>
+
+        <%= simple_form_for([@cocktail, @dose]) do |f| %>
+          <%= f.association :ingredient, as: :select %>
+          <%= f.input :description %>
+          <%= f.submit 'Save', class: 'btn btn-secondary' %>
+        <% end %>
+    </div>
+
+    <div class="col-6">
+      <h3>Add an image</h3>
+
+      <%= simple_form_for([@cocktail, @image]) do |f| %>
+        <%= f.input :url %>
+        <%= f.input :title %>
+        <%= f.submit 'Save', class: 'btn btn-secondary' %>
+      <% end %>
+    </div>
+  </div>
+
   <div class="row">
-    <div class="col">
-      <h3>Cocktail ingredients</h3>
+    <div class="col-6">
+      <h3>Your ingredients</h3>
 
       <% @cocktail.doses.each do |dose| %>
         <div class="row">
@@ -29,13 +49,24 @@
       <% end %>
     </div>
 
-    <div class="col">
-      <h3>Add a new dose</h3>
-
-      <%= simple_form_for([@cocktail, @dose]) do |f| %>
-        <%= f.association :ingredient, as: :select %>
-        <%= f.input :description %>
-        <%= f.submit 'Save your dose', class: 'btn btn-secondary' %>
+    <div class="col-6">
+      <h3>Your images</h3>
+      <% @cocktail.images.each do |image| %>
+        <div class="row">
+          <div class="card-product w-100 m-2">
+            <img src="<%= image.url %>" />
+            <div class="card-product-infos w-100 d-flex justify-content-between">
+              <div>
+                <h2><%= image.title %></h2>
+              </div>
+              <div>
+                <%= link_to image_path(image), method: :delete, data: { confirm: 'Are you sure you want to delete this image?' }, style: 'color: grey' do %>
+                  <i class="fas fa-trash"></i>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
       <% end %>
     </div>
   </div>
